--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,12 +1,26 @@
 {{>layout/header}}
 
 <div class="col-md-12">
-    <h3>게시글 목록</h3>
+    <div style="display: flex; justify-content: space-between;">
+        <div style="text-align: left; flex: 1;">
+            <h3>게시글 목록</h3>
+        </div>
+        <div style="text-align: right; flex: 1;">
+            {{#userId}}
+                사용자ID: <span id="user">{{userId}}</span>
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+            {{/userId}}
+            {{^userId}}
+                <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+            {{/userId}}
+        </div>
+    </div>
     <table class="table table-horizontal table-bordered">
         <thead class="thread-strong">
         <tr>
             <th>번호</th>
             <th>제목</th>
+            <th>작성자ID</th>
             <th>등록일시</th>
         </tr>
         </thead>
@@ -15,6 +29,7 @@
             <tr>
                 <td>{{id}}</td>
                 <td><a href="/posts/update/{{id}}">{{title}}</a></td>
+                <td>{{writerId}}</td>
                 <td>{{createdAt}}</td>
             </tr>
             {{/posts}}
@@ -23,7 +38,9 @@
     {{^posts}}
         <p style="text-align: center;">게시글이 없습니다.</p>
     {{/posts}}
-    <a href="/posts/create" role="button" class="btn btn-primary" style="float: right">등록</a>
+    {{#userId}}
+        <a href="/posts/create" role="button" class="btn btn-primary" style="float: right">등록</a>
+    {{/userId}}
 </div>
 
 {{>layout/footer}}
