--- a/src/main/resources/templates/posts-create.mustache
+++ b/src/main/resources/templates/posts-create.mustache
@@ -9,6 +9,10 @@
                 <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
             </div>
             <div class="form-group">
+                <label for="writerId">작성자ID</label>
+                <input type="text" class="form-control" value="{{writerId}}" id="writerId" readonly>
+            </div>
+            <div class="form-group">
                 <label for="content">내용</label>
                 <textarea class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
             </div>
