--- a/src/main/resources/templates/posts-update.mustache
+++ b/src/main/resources/templates/posts-update.mustache
@@ -1,6 +1,7 @@
 {{>layout/header}}
 
 <div class="col-md-12">
+{{#editable}}
     <h3>게시글 수정/삭제</h3>
     <div class="col-md-4">
         <form>
@@ -13,12 +14,37 @@
                 <input type="text" class="form-control" id="title" value="{{post.title}}">
             </div>
             <div class="form-group">
+                <label for="writerId">작성자ID</label>
+                <input type="text" class="form-control" id="writerId" value="{{post.writerId}}" readonly>
+            </div>
+            <div class="form-group">
                 <label for="content">내용</label>
                 <textarea class="form-control" id="content">{{post.content}}</textarea>
             </div>
         </form>
         <button type="button" class="btn btn-primary" id="btn-update">수정</button>
         <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
+{{/editable}}
+{{^editable}}
+    <h3>게시글 조회</h3>
+    <div class="col-md-4">
+        <div class="form-group">
+            <label for="id">번호</label>
+            <input type="text" class="form-control" id="id" value="{{post.id}}" readonly>
+        </div>
+        <div class="form-group">
+            <label for="title">제목</label>
+            <input type="text" class="form-control" id="title" value="{{post.title}}" readonly>
+        </div>
+            <div class="form-group">
+                <label for="writerId">작성자ID</label>
+                <input type="text" class="form-control" id="writerId" value="{{post.writerId}}" readonly>
+            </div>
+        <div class="form-group">
+            <label for="content">내용</label>
+            <textarea class="form-control" id="content" readonly>{{post.content}}</textarea>
+        </div>
+{{/editable}}
         <a href="/" role="button" class="btn btn-secondary">목록</a>
     </div>
 </div>
